Fixed bug #70991 (zend_file_cache.c:710: error: array type has incomplete element type)